Closed Bug 97658 Opened 24 years ago Closed 24 years ago

if you've got an existing component.reg, open and Save fail to bring up dialogs; helper app dialog won't appear either

Categories

(SeaMonkey :: UI Design, defect)

x86
Linux
defect
Not set
blocker

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: bugzilla, Assigned: dp)

References

Details

(Keywords: regression, smoketest)

Attachments

(1 file)

thx to rkaa for pointing this out. using 2001.08.30.08-comm bits on linux/rh6.2. try File > Open [or ctrl+O] or File > Save As {or ctrl+S]. both fail to bring up the file picker.
anyone else see this on other platforms? blocks testing.
Keywords: smoketest
this worked fine for me on the linux commercial build 2001-08-30-06-trunk
tracy, could you try the 8am build? i'm guessing that includes dp's 7:09am checkin... unless that's in the 12pm build [haven't tested yet].
Keywords: regression
works fine for me on the -08-trunk build also.
nope, still broken with the 2001.08.30.12-comm bits. also blocks helper app testing, since the helper app dialog doesn't come when clicking downloadable links.
Summary: Open and Save fail to bring up dialogs → Open and Save fail to bring up dialogs; helper app dialog won't appear either
weirdness. lemme try a new profile...
hrm, tried with a new profile, still no go. other suggestions?
are those menu items disabled?
I see this on my linux debug build from this morning. file | open and file | save as don't bring up dialogs. the menu items are enabled.
items are not disabled here. The official build that fails for me is fetched from the "latest" dir, mozilla-i686-pc-linux-gnu-sea.tar.gz, filesize 10494756. Downloaded that after noticing this bug in my CVS build.
I see this on 2001082910/Linux (gcc295 build) with a profile from a build or two before. Steps to repro: 1. I didn't have a helper app set up for mp3 files 2. Went to http://www.mp3.com and clicked on a link for an mp3 file. 3. Got the dialog and checked the "Open with" radio button and chose /usr/bin/xmms. Un-checked "ask again" box and hit Open and then OK. 4. File played in xmms 5. Closed xmms and clicked on link again. 6. Got save as dialog instead of the file being opened with xmms (or getting the dialog with "Open with option"). I also got it by doing the following: 1. Went to http://www.cdnow.com and opened an album page with realaudio links. 2. Clicked on one and got dialog. 3. Hit "Advanced..." and configured helper app for realaudio. Un-checked "ask me" box and hit OK and file played. 4. Opened prefs and deleted helper app I'd just configured. 5. Clicked on realaudio link again and got save as dialog instead of dialog with "Open with" and "Advanced..." There may be an easier way to reproduce this but that's what I did...
cannot repro on mac 9.1, 2001.08.30.12-comm, and seth doesn't see this on his win32 build.
Keywords: pp
oops premature there: File > Open and File > Save work on mac, but i cannot bring up the helper app dialog there [eg, when clicking a download link on http://mozilla.org].
Keywords: pp
mozilla/xpfe/components/ucth wasn't built! investigating.. so the component for all this goodness isn't there on linux. yikes!
wait, that might be obsolete.
I saw this too on linux with trunk build from around 9 AM. Then I nuked my component.reg and now I see Open and Save as as usual.
that worked once, as root, but after starting as own user it failed again. Then tried as root, and open or save failed. Deleted component.reg again, restarted as root: save and open worked. Changed skin to modern, restarted as root: save and open failed. So something is weird.
Yes, I was just about to post the same thing. After removing component.reg, starting, shutting down and restarting access to File/Open/SaveAs is gone. Done with normal user non root.
I see that too. when component.reg is gone, it works. start up again with a prebuilt component.reg and it doesn't work. dp, is this yours?
over to dp.
Assignee: blakeross → dp
Summary: Open and Save fail to bring up dialogs; helper app dialog won't appear either → if you've got an existing component.reg, open and Save fail to bring up dialogs; helper app dialog won't appear either
On it
Status: NEW → ASSIGNED
Checked in fix. r=gagan
Notified Loan Pham. xpcom/components/nsComponentManager.cpp changed. xpcom/ needs to be rebuilt
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
*** Bug 97690 has been marked as a duplicate of this bug. ***
the attachment button and File->Attach File menu item in mail compose are broken for me and sdonner on linux. Could this be the same bug? I am also unable to attach patches to bugzilla. Pressing the browse button does nothing.
Dawn yes. It should be fixed now. Sorry about that.
The fix for this bug caused the entire Ports page to go orange due to what looks like a crash on xpcom shutdown. Just reverting nsComponentManager.cpp to 1.154 "fixed" the problem. Reopening.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
"orange" on comet build seems to suggest this is an optimized build only problem.
*** Bug 97694 has been marked as a duplicate of this bug. ***
Stack of crash: #0 0x40135244 in nsComponentManagerImpl::UnloadLibraries(nsIServiceManager*, int) () from /builds/seamonkey/obj/opt/dist/bin/libxpcom.so #1 0x40131b88 in nsComponentManagerImpl::Shutdown() () from /builds/seamonkey/obj/opt/dist/bin/libxpcom.so #2 0x400f9d5f in NS_ShutdownXPCOM(nsIServiceManager*) () from /builds/seamonkey/obj/opt/dist/bin/libxpcom.so #3 0x08052068 in main ()
for the record: the crash is separately reported in bug 97770
We crash because mLoaderData[1].loader is null when we do rv = mLoaderData[i].loader->UnloadAll(aWhen);
Closing this in favour of bug# 97770 Have patch in that bug.
Status: REOPENED → RESOLVED
Closed: 24 years ago24 years ago
Resolution: --- → FIXED
*** Bug 97876 has been marked as a duplicate of this bug. ***
vrfy fixed. linux, 2001.09.04.08-comm also doublechecked mac 9.1 [2001.09.04.11-comm] and winnt [2001.09.04.00-comm], which are fine.
Status: RESOLVED → VERIFIED
Product: Core → Mozilla Application Suite
Component: XP Apps: GUI Features → UI Design
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: