bug #97658 Fixing build blocker. fixing js components after component registry has been created r=gagan